# pyaba

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
backend/apps/api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
backend/apps/api/management/commands/: certificate.py
backend/apps/api/migrations/: 0001_initial.py  0002_rename_birth_date_attendee_birthday.py  0003_alter_attendee_birthday_alter_attendee_email_and_more.py  0004_alter_registration_uuid.py  0005_registration_present.py  0006_certificatesigner_event_certificate_background_and_more.py  0007_remove_registration_certificate_generated_and_more.py  0008_alter_event_certificate_text.py  0009_remove_event_certificate_background_and_more.py  0010_certificatesigner_signature_image.py  0011_registration_certificate_sent.py
backend/apps/api/templates/email/: tutorial_certificate.html  tutorial_subscription_confirmation.html
backend/apps/api/tests/: conftest.py  test_models.py  test_validators.py
backend/config/: settings.py  urls.py
backend/locale/pt_BR/LC_MESSAGES/: django.po
frontend/: README.md  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/boot/: axios.js  utils.js
frontend/src/components/: SubscriptionForm.vue
frontend/src/css/: quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: ConfirmationPage.vue  ErrorNotFound.vue  EventsPage.vue  TutorialsPage.vue
frontend/src/router/: routes.js
frontend/src/stores/: event.js
